# sendMsg

./: .gitignore  Cargo.toml  Rocket.log.2024-06-03-16  package.json
CProgramming/2.1.4/: printAssii.c
CProgramming/2.2_4/: Practice.c  show_bytes.c
CProgramming/hello/: hello.c
LOGFILES/: Rocket.2024-06-03-16
SQL/: get_flow_list.sql  get_flow_list.sql~RF1b0d79.TMP  get_flow_list.sql~RF21e0022.TMP  get_sendmsg.sql  get_userid_list.sql  insert_userid_table.sql  userid.xlsx  调试脚本.sql
eventful/: Cargo.toml
eventful/src/: lib.rs
html_test/: SSE.html  flower.html  preview.html  ws.html
mssql/: Cargo.toml
mssql/src/: connection.rs  error.rs  fmt.rs  lib.rs  resultset.rs  row.rs  serde.rs  sql.rs
mssql/src/pool/: mod.rs  wrap.rs
mssql/tests/: pool.rs  prelude.rs  raise_error.rs  serde.rs
parseJson/: Json.ts
seqid/: Cargo.toml
seqid/src/: lib.rs
src/: log_record.rs  main.rs  route.rs  sendmsg.rs  smg.rs
src/route/: interface.rs  route_method.rs
