[package]
name = "sendmsg"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##jsonwebtoke
jsonwebtoken = "9"
##tokio crate async runtime
tokio = { version = "1.37.0", features = ["full"] }
##序列化与反序列化crate,添加“derive”使其#[derive(Serialize,Deserialize)]可用
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.116" }
###request
httprequest = { package = "reqwest", version = "0.12.4", features = ["json"] }
##增加mssql
mssql = { path = "mssql" }
##增加Rocket框架
rocket = { version = "0.5.0", features = ["json"] }
##同源域名访问问题
rocket_cors = "0.6.0"

##跟踪日志
tracing-subscriber = { version = "0.3.16", features = [
    "time",
    "chrono",
    "env-filter",
] }
tracing = "0.1.37"
tracing-appender = "0.2.3"
tm = { package = "time", version = "0.3.36", features = [
    "macros",
    "formatting",
] }
chrono = "0.4"
##静态变量定义
lazy_static = { version = "1.4.0" }
#eighter
either = "1.13.0"
##hash转换
rust-crypto = { version = "0.2.36" }
#uuid
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
